# chargpt

./: .gitignore  README.md  pyproject.toml
chargpt/: __init__.py  data.py  model.py  sample.py  train.py
data/: download.py
examples/: Feed_Forward_networks.ipynb  bigram.py  bigram_sa.py  bigram_transformer.py  block.ipynb  build_gpt.ipynb  colab_train.ipynb  gpt.ipynb  multi_head_attention.ipynb  self_attention.ipynb
tests/: test_checkpoint.py  test_data.py  test_model.py
